--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Bada Bing</title>
 </head>
 <body>
 
-<h1>This is a Heading</h1>
+<h1>Papa Mort</h1>
 <p>This is a paragraph.</p>
 <p> jake moriarty </p>
 <h1> Version 2 </h1>
